objects/Addendum__c.object
<CustomObject><fields>
<fields>
        <fullName>Special_Provisions__c</fullName>
        <description>Section V:  Supporting Addenda Forms
2013-14 DIST Gifted Program Addendum</description>
        <inlineHelpText>Gifted students receive special provisions, Tier II and Tier III, for appropriate instruction and content extensions in the academic standards that align with individual strengths.</inlineHelpText>
        <label>Special Provisions</label>
        <picklist>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Steps_and_Timeline_for_Improvement__c</fullName>
        <description>Section V:  Supporting Addenda Forms
2013-14 DIST Gifted Program Addendum</description>
        <inlineHelpText>Describe steps and timeline for major improvement strategies and professional development that will have positive and long term impact to improve gifted student performance.</inlineHelpText>
        <label>Steps and Timeline for Improvement</label>
        <length>5000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Strategies__c</fullName>
        <description>Implement such strategies as financial incentives, increased opportunities for promotion and career growth, and more flexible work conditions that are designed to recruit, place, and retain staff with the skills necessary to meet the needs of the students in the turnaround school.</description>
        <inlineHelpText>Implement such strategies as financial incentives, increased opportunities for promotion and career growth, and more flexible work conditions that are designed to recruit, place, and retain staff with the skills necessary to meet the needs of the students</inlineHelpText>
        <label>Strategies</label>
        <length>5000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Strategies_to_Improve_Ac__c</fullName>
        <description>Section V:  Supporting Addenda Forms
DIST Title III Improvement Addendum</description>
        <inlineHelpText>Scientifically Based Research Strategies.  Describe scientifically based research strategies to improve academic achievement and English Language Development (ELD) for English Language Learners</inlineHelpText>
        <label>Strategies for ELD for English Learners</label>
        <length>5000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Student_Data_Use__c</fullName>
        <description>Describe the continuous use of student data (such as from formative, interim, and summative assessments) to inform and differentiate instruction in order to meet the academic needs of individual students.</description>
        <inlineHelpText>Describe the continuous use of student data (such as from formative, interim, and summative assessments) to inform and differentiate instruction in order to meet the academic needs of individual students.</inlineHelpText>
        <label>Student Data Use</label>
        <length>5000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Student_Enrollment__c</fullName>
        <label>Student Enrollment</label>
        <length>5000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Student_Performance_Targets__c</fullName>
        <description>Section V:  Supporting Addenda Forms
2013-14 DIST Gifted Program Addendum</description>
        <inlineHelpText>Describe gifted student performance targets in terms of either the district targets (convergence) or as a specific gifted student target/s (divergence) based upon performance challenges of gifted students.</inlineHelpText>
        <label>Student Performance Targets</label>
        <length>5000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Student_Services_and_Support__c</fullName>
        <description>Provide appropriate social-emotional and community-oriented services and supports for students.</description>
        <inlineHelpText>Provide appropriate social-emotional and community-oriented services and supports for students.</inlineHelpText>
        <label>Student Services and Support</label>
        <length>5000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Target_Setting__c</fullName>
        <description>Section V:  Supporting Addenda Forms
2013-14_DIST_SGCPAddendum</description>
        <inlineHelpText>Includes targets for each of the following:
•	Reducing student truancy rate
•	Reducing dropout rate
•	Increasing student attendance rate
•	Increasing graduation rate
•	Increasing completion rate</inlineHelpText>
        <label>Target Setting</label>
        <length>5000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Teacher_Recruitment_Retention__c</fullName>
        <description>What process is in place to ensure that only highly qualified staff are recruited and retained for schoolwide programs?</description>
        <inlineHelpText>What process is in place to ensure that only highly qualified staff are recruited and retained for schoolwide programs?</inlineHelpText>
        <label>Teacher Recruitment &amp; Retention</label>
        <length>5000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Timely_Intervention__c</fullName>
        <description>How will students be identified for and provided early interventions in a timely manner?</description>
        <inlineHelpText>How will students be identified for and provided early interventions in a timely manner?</inlineHelpText>
        <label>Timely Intervention</label>
        <length>5000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>TitleIAPPCProposedAmountTotal_Formula__c</fullName>
        <formula>Title_IA_PPC_Proposed_Amount_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TitleIAPPCProposedAmountTotal_Formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Title_IA_PPC_Proposed_Amount_Total__c</fullName>
        <label>Title IA PPC Proposed Amount Total</label>
        <summarizedField>Supporting_Addenda_Forms__c.Title_IA_PPC_Proposed_Amount__c</summarizedField>
        <summaryForeignKey>Supporting_Addenda_Forms__c.Addendum__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Title_IIA_Proposed_Amount_Total__c</fullName>
        <label>Title IIA Proposed Amount Total</label>
        <summarizedField>Supporting_Addenda_Forms__c.Title_IIA_Proposed_Amount__c</summarizedField>
        <summaryForeignKey>Supporting_Addenda_Forms__c.Addendum__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Title_III_Proposed_Amount_Total__c</fullName>
        <label>Title III Proposed Amount Total</label>
        <summarizedField>Supporting_Addenda_Forms__c.Title_III_Proposed_Amount__c</summarizedField>
        <summaryForeignKey>Supporting_Addenda_Forms__c.Addendum__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Title_I_Funds_Usage__c</fullName>
        <description>How are Title I funds used in coordination with other ESEA funds, as well as state and local funds?</description>
        <inlineHelpText>How are Title I funds used in coordination with other ESEA funds, as well as state and local funds?</inlineHelpText>
        <label>Title I Funds Usage</label>
        <length>5000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Tools_for_Fair_Access_to_Identification__c</fullName>
        <description>Section V:  Supporting Addenda Forms
2013-14 DIST Gifted Program Addendum</description>
        <inlineHelpText>The district uses multiple pathways and tools to ensure equal and fair access to identification, especially in traditionally underserved student groups; and makes progress toward proportional representation in the gifted population.</inlineHelpText>
        <label>Tools for Fair Access to Identification</label>
        <picklist>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Transition_Plan__c</fullName>
        <description>How does the school assist in the transition of preschool students from early childhood programs to elementary school programs?</description>
        <inlineHelpText>How does the school assist in the transition of preschool students from early childhood programs to elementary school programs?</inlineHelpText>
        <label>Transition Plan</label>
        <length>5000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Transition_Support__c</fullName>
        <label>Transition Support</label>
        <length>5000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Transition_to_Elementary_School__c</fullName>
        <description>How does the school assist in the transition of preschool students from early childhood programs to local elementary school programs?</description>
        <inlineHelpText>How does the school assist in the transition of preschool students from early childhood programs to local elementary school programs?</inlineHelpText>
        <label>Transition to Elementary School</label>
        <length>5000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Turnaround_Partner_Name__c</fullName>
        <label>Turnaround Partner Name</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Turnaround_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A lead turnaround partner has been employed that uses research-based strategies and has a proven record of success working with schools or districts under similar circumstances. The turnaround partner is immersed in all aspects of developing and collaboratively executing the plan and serves as a liaison to other school or district partners.</description>
        <inlineHelpText>A lead turnaround partner has been employed that uses research-based strategies and has a proven record of success working with schools or districts under similar circumstances. The turnaround partner is immersed in all aspects of developing and collabora</inlineHelpText>
        <label>Turnaround Partner</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>UIP_Evaluation__c</fullName>
        <description>How will the UIP (including the Title I requirements) be annually evaluated for effectiveness and include the participation of parents?</description>
        <inlineHelpText>How will the UIP (including the Title I requirements) be annually evaluated for effectiveness and include the participation of parents?</inlineHelpText>
        <label>UIP Evaluation</label>
        <length>5000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>UIP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UIP</label>
        <referenceTo>UIP__c</referenceTo>
        <relationshipLabel>Addenda</relationshipLabel>
        <relationshipName>Addenda</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ZPIF_UIP_Identidier__c</fullName>
        <label>ZPIF UIP Identidier</label>
        <length>50</length>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Addendum</label><nameField>
        <label>Addenda Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Addenda</pluralLabel><recordTypeTrackHistory>false</recordTypeTrackHistory><sharingModel>ReadWrite</sharingModel><startsWith>Vowel</startsWith><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>UIP__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Comprehensive_Needs_Assessment__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews><recordTypes>
        <fullName>DIST_ESEA_Supporting_Addendum</fullName>
        <active>true</active>
        <label>DIST ESEA Supporting Addendum</label>
    </recordTypes><recordTypes>
        <fullName>DIST_Gifted_Program</fullName>
        <active>true</active>
        <description>2013-14 DIST Gifted Program Addendum</description>
        <label>DIST Gifted Program</label>
    </recordTypes><recordTypes>
        <fullName>DIST_SGCP_Addendum</fullName>
        <active>true</active>
        <label>DIST SGCP Addendum</label>
    </recordTypes><recordTypes>
        <fullName>DIST_Title_III_Improvement_Addendum</fullName>
        <active>true</active>
        <label>DIST Title III Improvement Addendum</label>
    </recordTypes><recordTypes>
        <fullName>Dist_Sch_Turnaround</fullName>
        <active>true</active>
        <label>Dist/Sch Turnaround</label>
    </recordTypes><recordTypes>
        <fullName>TIG_Closure</fullName>
        <active>true</active>
        <label>TIG Closure</label>
    </recordTypes><recordTypes>
        <fullName>TIG_Transformation</fullName>
        <active>true</active>
        <label>TIG Transformation</label>
    </recordTypes><recordTypes>
        <fullName>TIG_Turnaround</fullName>
        <active>true</active>
        <label>TIG Turnaround</label>
    </recordTypes><recordTypes>
        <fullName>Title_I</fullName>
        <active>true</active>
        <label>Title I</label>
    </recordTypes></CustomObject>